# todo

./: README.md
backend/: .gitignore  README.md  docker-compose-dev.yml  logfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: df344855e82b_add_status.py  ec8f080f8af4_init.py
backend/common/: auth.py
backend/models/: create.py  db_session.py  todo.py  user.py
backend/routes/: todo.py  user.py
backend/settings/: __init__.py  settings_dev.py
frontend/: .env.qa  package-lock.json
frontend/app/: layout.tsx
frontend/app/(authenticated)/: action.ts  layout.tsx  nav.tsx
frontend/app/(authenticated)/todos/: action.ts  item.tsx  newItem.tsx  page.tsx
frontend/app/signin/: action.ts  form.tsx  page.tsx
frontend/app/signup/: action.ts  form.tsx  page.tsx
frontend/utils/: auth.ts  axiosApi.ts
